--- a/LearningScenarios/code-pipeline.yaml
+++ b/LearningScenarios/code-pipeline.yaml
@@ -12,7 +12,7 @@ metadata:
     ai.sap.com/version: "1.0"
 spec:
   imagePullSecrets:
-    - name: housepricepredictor-dockerregistry-20240510175221 # your docker registry secret
+    - name: saplesson-docsecret-20240513123318 # your docker registry secret
   entrypoint: mypipeline
   templates:
   - name: mypipeline
@@ -22,7 +22,7 @@ spec:
 
   - name: mycodeblock1
     container:
-      image: docker.io/datarobotsapdemo/house-price:01 # Your docker image name
+      image: docker.io/datarobotsapdemo/house-price:3
       command: ["/bin/sh", "-c"]
       args:
         - "python /app/src/main.py"
